Fix header spacing, add footer, refactor class names

--- a/style.css
+++ b/style.css
@@ -1,27 +1,31 @@
 body{
     font-family: 'Montserrat', sans-serif;
     margin:0;
-
+    padding:0;
     
 }
+
+.dark-background{
+    background-color: #1F2937;
+}
+
 /*Styling for header section*/
 .header{
-    background-color: #1F2937;
     color:white;
     display:flex;
     font-weight:600;
     font-size:24px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 0 200px;
 }
 
 ul{
     list-style-type:none;
     font-weight:normal;
-    font-size:18px;
     display:flex;
     gap:10px;
+    padding-left:0px;
 }
 a{
     color:white;
@@ -30,7 +34,6 @@ a{
 
 /*Hero Section*/
 .hero-section{
-    background-color: #1F2937;
     color:white;
     display:flex;
     align-items: center;
@@ -40,7 +43,7 @@ a{
 .hero-content{
     width:400px;
     color:#E5E7EB;
-    font-size:18px;
+    
 }
 h1{
     font-size:48px;
@@ -134,10 +137,22 @@ h1{
 
 .cta-text{
     font-weight:bold;
-    font-size:18px;
+    font-size:20px;
 }
 
 .cta-subtext{
     font-weight:normal;
-    font-size:14px;
+}
+
+/*Footer*/
+.footer{
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    padding:20px;
+    color:white;
+}
+
+.small-text{
+    font-size:18px;
 }
